--- a/WebApplication4/WebApplication4/Content/estilos-index1.css
+++ b/WebApplication4/WebApplication4/Content/estilos-index1.css
@@ -38,13 +38,20 @@ body{background:url(fondo1.jpg) fixed top center !important;background-repeat:sp
 
 .headDestacados {
         background-color: #337AB7;
-        color: white;
+        color: black;
+        border:1px solid black;
+        border-radius:5px;
         padding: 5px 10px;
         font-weight: bold;
+        text-align:center;
         font-family: sans-serif;
         font-size: 17px;
         height: 35px;
     }
+.carousel {
+        border:1px solid black;
+        border-radius:5px;
+}
 
 table{
     background-color:white;    
@@ -90,3 +97,10 @@ thead {
 
 
 
+.contenedor {
+    border-radius:5px;
+    border:2px dashed black;
+    background-color:#e5f5ff;
+    opacity:0.8;
+    filter:alpha(opacity=80); /* For IE8 and earlier */
+}
