--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -20,7 +20,7 @@
             text-decoration: none;
         }
         #pref a:hover {
-            text-decoration: underline;
+            --text-decoration: underline;
             font-weight:bold;
         }
         #points {
