--- a/WebApplication4/WebApplication4/Content/estilos-index1.css
+++ b/WebApplication4/WebApplication4/Content/estilos-index1.css
@@ -99,7 +99,7 @@ thead {
 
 .contenedor {
     border-radius:5px;
-    border:2px dashed black;
+    border:2px solid black;
     background-color:#e5f5ff;
     opacity:0.8;
     filter:alpha(opacity=80); /* For IE8 and earlier */
