--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -44,11 +44,11 @@
                     <ul id="pref" >
                         <li><a href="@Url.Action("ModificarDatos","CuentaUsuario")"><span class="fa fa-newspaper-o fa-fw"></span> Actualizar mis datos</a></li>
                         <li><a href="@Url.Action("ChangePassword","Manage")"><span class="fa fa-unlock-alt fa-fw"></span> Cambiar mi contraseña</a></li>
-                        <li><a href="@Url.Action("MisPreferencias", "CuentaUsuario")"><span class="fa fa-heart-o fa-fw"></span> Ver mis preferencias</a></li>
-                        <li><a href="@Url.Action("MisReservas", "CuentaUsuario")"><span class="fa fa-ticket fa-fw"></span> Ver mis reservas</a></li>
-                        <li><a href="@Url.Action("MisCompras", "CuentaUsuario")"><span class="fa fa-money fa-fw"></span> Ver mis Compras</a></li>
-                        <li><a href="@Url.Action("MiCarrito","CuentaUsuario")"><span class="fa fa-shopping-cart fa-fw"></span> Ver carrito</a></li>
-                        <li><a href="@Url.Action("VerRegalos","CuentaUsuario")"><span class="fa fa-gift fa-fw"></span> Ver Regalos</a></li>
+                        <li><a href="@Url.Action("MisPreferencias", "CuentaUsuario")"><span class="fa fa-heart-o fa-fw"></span> Mis preferencias</a></li>
+                        <li><a href="@Url.Action("MisReservas", "CuentaUsuario")"><span class="fa fa-ticket fa-fw"></span> Mis reservas</a></li>
+                        <li><a href="@Url.Action("MisCompras", "CuentaUsuario")"><span class="fa fa-money fa-fw"></span> Mis compras</a></li>
+                        <li><a href="@Url.Action("MiCarrito","CuentaUsuario")"><span class="fa fa-shopping-cart fa-fw"></span> Mi carrito</a></li>
+                        <li><a href="@Url.Action("VerRegalos","CuentaUsuario")"><span class="fa fa-gift fa-fw"></span> Ver regalos</a></li>
                     </ul>
                 </form>
             </div>         
