reporte eventos correcion menor

--- a/WebApplication4/WebApplication4/Views/Evento/ReporteEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ReporteEvento.cshtml
@@ -157,7 +157,7 @@
 
     function exportar() {
 
-        window.open('data:application/vnd.ms-excel,' + encodeURIComponent($('div[id$=resultTablet]').html()));
+        window.open('data:application/vnd.ms-excel,' + encodeURIComponent($('div[id$=resultTable]').html()));
         e.preventDefault();
 
     }
