mensaje en tipo de cambio

--- a/WebApplication4/WebApplication4/Views/TipoDeCambio/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/TipoDeCambio/Index.cshtml
@@ -15,9 +15,8 @@
         </ol>
     </div>
 </div>
-<div class="container">
-    
-
+<div class="container">    
+    <h8>Los valores de tipo cambio que se ingresen se truncaran hasta 3 decimales</h8>
     @using (Html.BeginForm("RegisterTipoDeCambio", "TipoDeCambio", FormMethod.Post, new { }))
     {
         @Html.AntiForgeryToken()
