--- a/WebApplication4/WebApplication4/Views/Manage/ChangePassword.cshtml
+++ b/WebApplication4/WebApplication4/Views/Manage/ChangePassword.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container-fluid">
-    <div class="col-md-5">
+    <div class="col-md-3">
         <ol class="breadcrumb">
             <li>@Html.ActionLink("Mi Cuenta", "MiCuenta", "CuentaUsuario")</li>
             <li class="active">Cambiar Contrasena</li>
@@ -14,35 +14,41 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <hr />
+
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="col-md-8">
-        <div class="row form-group">
-            @Html.LabelFor(c => c.OldPassword, new { @class = "control-label col-md-3" })
-            <div class="col-md-8">
-                @Html.TextBoxFor(c => c.OldPassword, new { @type = "password", @class = "form-control" })
-                @Html.ValidationMessageFor(c => c.OldPassword)
+    <div class="container">
+        <div class="contenedor col-md-8">
+            <br />
+            <div class="row form-group">
+                @Html.LabelFor(c => c.OldPassword, new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(c => c.OldPassword, new { @type = "password", @class = "form-control" })
+                    @Html.ValidationMessageFor(c => c.OldPassword)
+                </div>
             </div>
-        </div>
-        <div class="row form-group">
-            @Html.LabelFor(c => c.NewPassword, new { @class = "control-label col-md-3" })
-            <div class="col-md-8">
-                @Html.TextBoxFor(c => c.NewPassword, new { @type = "password", @class = "form-control" })
-                @Html.ValidationMessageFor(c => c.NewPassword)
+            <div class="row form-group">
+                @Html.LabelFor(c => c.NewPassword, new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(c => c.NewPassword, new { @type = "password", @class = "form-control" })
+                    @Html.ValidationMessageFor(c => c.NewPassword)
+                </div>
             </div>
-        </div>
-        <div class="row form-group">
-            @Html.LabelFor(c => c.ConfirmPassword, new { @class = "control-label col-md-3" })
-            <div class="col-md-8">
-                @Html.TextBoxFor(c => c.ConfirmPassword, new { @type = "password", @class = "form-control" })
-                @Html.ValidationMessageFor(c => c.ConfirmPassword)
+            <div class="row form-group">
+                @Html.LabelFor(c => c.ConfirmPassword, new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(c => c.ConfirmPassword, new { @type = "password", @class = "form-control" })
+                    @Html.ValidationMessageFor(c => c.ConfirmPassword)
+                </div>
             </div>
-        </div>
-        <div class="row" style="text-align: center">
-            <button style="button" class="btn btn-primary">Cambiar </button>
-            <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
+            <div class="row form-group">
+                <center>
+                    <button style="button" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span> Guardar</button>
+                    <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger"><span class="glyphicon glyphicon-backward"></span> Regresar</a>
+                </center>
+            </div>
         </div>
     </div>
+
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
