--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
@@ -89,13 +89,14 @@
                 </div>
             </div>
             <div class="row form-group">
-                <div class="col-md-offset-4 col-md-6">
-                    <button type="submit" class="btn btn-primary">
-                        Modificar<span class="glyphicon glyphicon-pencil"></span>
-                    </button>
-                    <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger"> Salir <span class="glyphicon glyphicon-log-out"></span></a>
+                <div class="col-md-12">
+                    <center>
+                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span> Guardar</button>
+                        <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger"><span class="glyphicon glyphicon-backward"></span> Regresar</a>
+                    </center>
                 </div>
             </div>
+            <br />
         </div>
         <!--CARRUSEL-->
         <div class="col-md-4">
