--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisPreferencias.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisPreferencias.cshtml
@@ -24,10 +24,9 @@
                         <h3>Elija categorías de su interés</h3><br>
                         @for (int i = 0; i < Model.listSelected.Length; i++)
                         {
-
                             @Html.HiddenFor(c => c.listIdCategorias[i])
                             @Html.HiddenFor(c => c.listNombreCategorias[i])
-                            <label>
+                            <label style="font-size:18px">
                                 @Html.CheckBoxFor(c => c.listSelected[i])
                                 @Model.listNombreCategorias[i]
                             </label>
@@ -39,7 +38,6 @@
                         <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger"><span class="glyphicon glyphicon-backward"></span> Regresar</a>
                     </center>
                 </div>
-
             </div>
 
             <!--CARRUSEL-->
