renderPatial carrusel, pero solo en verEvento

--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/VerRegalos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/VerRegalos.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using WebApplication4.Models;
+@using WebApplication4.Controllers;
+
 @{
     ViewBag.Title = "VerRegalos";
     Layout = "~/Views/Shared/_Layout.cshtml"; 
@@ -53,7 +55,7 @@
 
             <!--CARRUSEL-->
             <div class="col-md-4">
-
+                @*{Html.RenderPartial("Destacados");}*@
             </div>
         </div>
         
