--- a/WebApplication4/WebApplication4/Content/estilos-index2.css
+++ b/WebApplication4/WebApplication4/Content/estilos-index2.css
@@ -1,23 +1,16 @@
-
-#busqAvanzada{text-align: center; margin-top: 10px;}
-header{margin-bottom: 10px}
-#barra{background-color: #337ab7; color: white }
-#seccionPrincipal{}
-#carousel-1{margin-bottom: 10px}
+* {    padding: 0px;margin:0px}
+#busqAvanzada{text-align: center; margin-top: 10px;margin-bottom: 10px}
+header{}
 #footer{background: #101010;height: 100px;color: white;text-align: center}
 .event{cursor: pointer}
-#logeado{display: none}
 
-
- tbody {
+tbody {
         cursor: pointer;
-}
-    
+}    
 .trselected {
         background: #F1F1F1;
         font-weight: bold;
 }
-
 thead {
         background-color: #337AB7;
         color: white;
